# Ask-My-Docs

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.mypy_cache/3.10/: cache.db-journal
data/: eval_dataset.jsonl
src/: api.py  config.py  pipeline.py
src/evaluation/: harness.py  metrics.py
src/generation/: generator.py  prompts.py
src/ingestion/: chunker.py  embedder.py  indexer.py  models.py
src/reranking/: cross_encoder.py
src/retrieval/: hybrid.py
src/static/: index.html
tests/: conftest.py  test_api.py  test_chunker.py  test_embedder.py  test_eval_report.py  test_generator.py  test_harness_main.py  test_hybrid_retrieval.py  test_hybrid_retriever_class.py  test_indexer.py  test_metrics.py  test_metrics_llm.py  test_pipeline.py  test_reranker.py
